# Sign-Language-Translator

./: .pre-commit-config.yaml  Makefile  backend.dockerfile  docker-compose.yaml  frontend.dockerfile  pyproject.toml
backend/: Dockerfile
backend/src/: __init__.py  config.py  db.py  db_models.py  main.py  main_frontend_tests.py  models.py  prediction.py  utils.py
backend/src/routers/: __init__.py  auth_router.py  image_router.py  recording_router.py  translation_router.py  user_router.py
backend/src/services/: __init__.py  auth_service.py  tranlsation_service.py
frontend/: Dockerfile  __init__.py  home.py  models.py  streamlit_app.py
frontend/components/: __init__.py  admin_panel.py  translator.py
frontend/utils/: api_interactions.py
