[tool.poetry]
name = "sign-lanugage-translator"
version = "0.1.0"
description = "Realizacja projektu w ramach przedmiotu Modelowanie i analiza systemów informatycznych"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pydantic = "^2.10.3"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.115.6"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version="py312"
exclude=[".venv"]
line-length=120
indent-width=4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    # Rules list: https://docs.astral.sh/ruff/rules/
    "ALL"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

